Test generated JavaFX launcher under Xvfb
Add a focused standalone-project characterization that packages the generated AliceJavaFXLauncher, runs it with real JavaFX modules under xvfb-run, and verifies Program.main receives the launch arguments. The test skips with an explicit precondition when xvfb-run is unavailable instead of treating headless launcher behavior as display success.

Co-authored-by: Copilot <223556219+Copilot@users.noreply.github.com>